Add UI tweaks, pass alt text

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -736,6 +736,20 @@
 "main-menu-title" = "More";
 "main-menu-zero-faq" = "Wikipedia Zero FAQ";
 "menu-cancel-accessibility-label" = "Cancel";
+"microsite-yir-english-edits-bytes-slide-subtitle" = "In 2024, volunteers added 3,416,899,197 bytes to English Wikipedia. The sum of their work together leads to a steadily improving, fact-based, and reliable knowledge resource that they give to the world. All of us have knowledge to share, [learn how to participate]($1).";
+"microsite-yir-english-edits-bytes-slide-title" = "3.4 billion bytes added";
+"microsite-yir-english-edits-slide-subtitle" = "Volunteers made 81,987,181 changes across over 300 different language editions of Wikipedia. Over 31.2 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
+"microsite-yir-english-edits-slide-title" = "Editors made nearly 82 million changes this year";
+"microsite-yir-english-explore-slide" = "Explore Wikipedia in Review";
+"microsite-yir-english-explore-slide-subtitle" = "Wikipedia is the largest knowledge resource ever assembled in the history of the world, and it’s freely available to everyone everywhere. Look back on 2024 through the lens of Wikipedia.";
+"microsite-yir-english-non-donor-slide-subtitle" = "With your help, the Wikimedia Foundation—the nonprofit behind Wikipedia—will continue to ensure that the information you rely on is ad-free and trustworthy, while keeping Wikipedia running smoothly with cutting-edge tools and technologies. Please consider making a donation today. [Learn more about our work]($1).";
+"microsite-yir-english-non-donor-slide-title" = "0 ads served on Wikipedia";
+"microsite-yir-english-reading-slide-subtitle" = "People spent an estimated 2.4 billion hours—nearly 275,000 years!—reading English Wikipedia in 2024. Wikipedia is there when you want to learn about our changing world, win a bet among friends, or answer a curious child’s question.";
+"microsite-yir-english-reading-slide-title" = "We spent 2.4 billion hours reading";
+"microsite-yir-english-saved-reading-slide-subtitle" = "Active iOS App users had over 31.6 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
+"microsite-yir-english-saved-reading-slide-title" = "We had over 31.6 million reading lists";
+"microsite-yir-english-top-read-slide-subtitle" = "When people want to learn about our world—the good, bad, weird, and wild alike—they turn to Wikipedia. The top 5 visited articles on English Wikipedia were:<ol><li>Deaths in 2024</li><li>Kamala Harris</li><li>2024 United States presidential election</li><li>Lyle and Erik Menendez</li><li>Donald Trump</li></ol><br>Read more in <a href=\"(aboutWikimediaURL)\">our dedicated blog post</a>.";
+"microsite-yir-english-top-read-slide-title" = "English Wikipedia’s most popular articles";
 "more-languages-tooltip-description" = "Search Wikipedia in over 300 languages";
 "more-languages-tooltip-title" = "Add languages";
 "more-menu" = "More";
@@ -1411,9 +1425,9 @@
 "year-in-review-base-viewed-subtitle" = "iOS app users have viewed Wikipedia articles $1 Billion times. For people around the world, Wikipedia is the first stop when answering a question, looking up information for school or work, or learning a new fact.";
 "year-in-review-base-viewed-title" = "We have viewed Wikipedia articles $1 Billion times";
 "year-in-review-button-title" = "Year in Review";
-"year-in-review-collective-article-views" = "An animated illustration depicting the iconic Wikipedia globe encircled by scaffolding, symbolizing the collaborative effort of people worldwide in building the project. The scene is surrounded by a cityscape, emphasizing its connection to humanity and global culture.";
-"year-in-review-collective-edits" = " A graph showing the top 10 most edited Wikipedia language editions in 2024: English with over 31 million edits, German with 5,508,570 edits, French with 5,276,385 edits, Spanish with 4,786,205 edits, Russian with 3,303,066 edits, Italian with 3,200,398 edits, Japanese with 2,973,657 edits, Chinese with 2,505,032 edits, Polish with 1,383,808 edits, and Ukrainian with 1,376,980 edits. The total number of edits across all Wikipedia editions in 2024 is 81,987,181.";
-"year-in-review-collective-edits-per-minute" = "A clock ticking, symbolizing the time spent by people reading Wikipedia.";
+"year-in-review-collective-article-views" = "An animated illustration of a computer screen with a web browser open, actively navigating through a Wikipedia article.";
+"year-in-review-collective-edits" = " A graph An illustration of two Wikipedia puzzle pieces, each carrying a piece of information.";
+"year-in-review-collective-edits-per-minute" = " clock ticking, symbolizing the time spent by people reading Wikipedia.";
 "year-in-review-collective-explore" = "An animated illustration depicting the iconic Wikipedia globe encircled by scaffolding, symbolizing the collaborative effort of people worldwide in building the project. The scene is surrounded by a cityscape, emphasizing its connection to humanity and global culture.";
 "year-in-review-collective-languages" = "An animated illustration of a stone engraved with inscriptions representing various languages, symbolizing how Wikipedia collaboratively builds knowledge from diverse cultures and regions.";
 "year-in-review-collective-saved-articles" = "A puzzle globe featuring Wikipedia's logo, representing global collaboration.";
@@ -1427,22 +1441,7 @@
 "year-in-review-day-wednesday" = "Wednesdays";
 "year-in-review-donate" = "Donate";
 "year-in-review-donate-now" = "Donate now";
-"year-in-review-english-donor-slide-subtitle" = "Thank you for investing in the future of free knowledge. This year, the Wikimedia Foundation improved the technology to serve every reader and volunteer better, developed tools that empower collaboration, and supported Wikipedia in more languages. [Learn more about our work]($1).";
-"year-in-review-english-donor-slide-title" = "Your generosity helped keep Wikipedia thriving";
-"year-in-review-english-edits-bytes-slide-subtitle" = "In 2024, volunteers added 3,416,899,197 bytes to English Wikipedia. The sum of their work together leads to a steadily improving, fact-based, and reliable knowledge resource that they give to the world. All of us have knowledge to share, [learn how to participate]($1).";
-"year-in-review-english-edits-bytes-slide-title" = "3.4 billion bytes added";
-"year-in-review-english-edits-slide-subtitle" = "Volunteers made 81,987,181 changes across over 300 different language editions of Wikipedia. Over 31.2 million changes were made on English Wikipedia. Every hour of every day, volunteers are working to improve Wikipedia.";
-"year-in-review-english-edits-slide-title" = "Editors made nearly 82 million changes this year";
-"year-in-review-english-explore-slide" = "Explore Wikipedia in Review";
-"year-in-review-english-explore-slide-subtitle" = "Wikipedia is the largest knowledge resource ever assembled in the history of the world, and it’s freely available to everyone everywhere. Look back on 2024 through the lens of Wikipedia.";
-"year-in-review-english-non-donor-slide-subtitle" = "With your help, the Wikimedia Foundation—the nonprofit behind Wikipedia—will continue to ensure that the information you rely on is ad-free and trustworthy, while keeping Wikipedia running smoothly with cutting-edge tools and technologies. Please consider making a donation today. [Learn more about our work]($1).";
-"year-in-review-english-non-donor-slide-title" = "0 ads served on Wikipedia";
-"year-in-review-english-reading-slide-subtitle" = "People spent an estimated 2.4 billion hours—nearly 275,000 years!—reading English Wikipedia in 2024. Wikipedia is there when you want to learn about our changing world, win a bet among friends, or answer a curious child’s question.";
-"year-in-review-english-reading-slide-title" = "We spent 2.4 billion hours reading";
-"year-in-review-english-saved-reading-slide-subtitle" = "Active iOS App users had over 31.6 million reading lists this year. Adding articles to reading lists allows you to access articles even while offline. You can also log in to sync reading lists across devices.";
-"year-in-review-english-saved-reading-slide-title" = "We had over 31.6 million reading lists";
-"year-in-review-english-top-read-slide-subtitle" = "When people want to learn about our world—the good, bad, weird, and wild alike—they turn to Wikipedia. The top 5 visited articles on English Wikipedia were:<ol><li>Deaths in 2024</li><li>Kamala Harris</li><li>2024 United States presidential election</li><li>Lyle and Erik Menendez</li><li>Donald Trump</li></ol><br>Read more in <a href=\"(aboutWikimediaURL)\">our dedicated blog post</a>.";
-"year-in-review-english-top-read-slide-title" = "English Wikipedia’s most popular articles";
+"year-in-review-english-edits" = "A graph showing the top 10 most edited Wikipedia language editions in 2024: English with over 31 million edits, German with 5,508,570 edits, French with 5,276,385 edits, Spanish with 4,786,205 edits, Russian with 3,303,066 edits, Italian with 3,200,398 edits, Japanese with 2,973,657 edits, Chinese with 2,505,032 edits, Polish with 1,383,808 edits, and Ukrainian with 1,376,980 edits. The total number of edits across all Wikipedia editions in 2024 is 81,987,181.";
 "year-in-review-feature-announcement-body" = "See insights about what articles we read and edited, and share highlights from our year on Wikipedia.";
 "year-in-review-feature-announcement-body-personalized" = "See insights about the articles you read on the Wikipedia app, share your journey, and discover highlights from your year.";
 "year-in-review-feature-announcement-title" = "Explore Wikipedia in Review";
