--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -736,6 +736,20 @@
 "main-menu-title" = "Title for menu of secondary items. {{Identical|More}}";
 "main-menu-zero-faq" = "Button text for showing the Wikipedia Zero Frequently Asked Questions (FAQ) document";
 "menu-cancel-accessibility-label" = "Accessible label text for toolbar cancel button {{Identical|Cancel}}";
+"microsite-yir-english-edits-bytes-slide-subtitle" = "Edits bytes slide subtitle for English Year in Review, $1 is replaced by link to learn to participate.";
+"microsite-yir-english-edits-bytes-slide-title" = "Edits bytes slide title for English Year in Review.";
+"microsite-yir-english-edits-slide-subtitle" = "Edits slide subtitle for English Year in Review.";
+"microsite-yir-english-edits-slide-title" = "Edits slide title for English Year in Review.";
+"microsite-yir-english-explore-slide" = "Explore slide title for English Year in Review.";
+"microsite-yir-english-explore-slide-subtitle" = "Explore slide subtitle for English Year in Review.";
+"microsite-yir-english-non-donor-slide-subtitle" = "Non-donor slide subtitle for English Year in Review with a link to learn more about Wikimedia's work.";
+"microsite-yir-english-non-donor-slide-title" = "Non-donor slide title for English Year in Review.";
+"microsite-yir-english-reading-slide-subtitle" = "Reading slide subtitle for English Year in Review.";
+"microsite-yir-english-reading-slide-title" = "Reading slide title for English Year in Review.";
+"microsite-yir-english-saved-reading-slide-subtitle" = "Saved reading slide subtitle for English Year in Review.";
+"microsite-yir-english-saved-reading-slide-title" = "Saved reading slide title for English Year in Review.";
+"microsite-yir-english-top-read-slide-subtitle" = "Top read slide subtitle for English Year in Review with HTML list tags and proper line breaks for the top 5 articles, using HTML style tags to make an ordered list.";
+"microsite-yir-english-top-read-slide-title" = "Top read slide title for English Year in Review.";
 "more-languages-tooltip-description" = "Description for tooltip explaining the 'More' button may be tapped to add more languages.";
 "more-languages-tooltip-title" = "Title for tooltip explaining the 'More' button may be tapped to add more languages.";
 "more-menu" = "Accessibility title for more button in toolbar.";
@@ -1427,22 +1441,7 @@
 "year-in-review-day-wednesday" = "Localized name for Wednesday in plural form.";
 "year-in-review-donate" = "Year in review donate button";
 "year-in-review-donate-now" = "Year in review donate now button title. Displayed on top of Learn more in-app web view.";
-"year-in-review-english-donor-slide-subtitle" = "Donor slide subtitle for English Year in Review with a link to learn more about Wikimedia's work.";
-"year-in-review-english-donor-slide-title" = "Donor slide title for English Year in Review.";
-"year-in-review-english-edits-bytes-slide-subtitle" = "Edits bytes slide subtitle for English Year in Review, $1 is replaced by link to learn to participate.";
-"year-in-review-english-edits-bytes-slide-title" = "Edits bytes slide title for English Year in Review.";
-"year-in-review-english-edits-slide-subtitle" = "Edits slide subtitle for English Year in Review.";
-"year-in-review-english-edits-slide-title" = "Edits slide title for English Year in Review.";
-"year-in-review-english-explore-slide" = "Explore slide title for English Year in Review.";
-"year-in-review-english-explore-slide-subtitle" = "Explore slide subtitle for English Year in Review.";
-"year-in-review-english-non-donor-slide-subtitle" = "Non-donor slide subtitle for English Year in Review with a link to learn more about Wikimedia's work.";
-"year-in-review-english-non-donor-slide-title" = "Non-donor slide title for English Year in Review.";
-"year-in-review-english-reading-slide-subtitle" = "Reading slide subtitle for English Year in Review.";
-"year-in-review-english-reading-slide-title" = "Reading slide title for English Year in Review.";
-"year-in-review-english-saved-reading-slide-subtitle" = "Saved reading slide subtitle for English Year in Review.";
-"year-in-review-english-saved-reading-slide-title" = "Saved reading slide title for English Year in Review.";
-"year-in-review-english-top-read-slide-subtitle" = "Top read slide subtitle for English Year in Review with HTML list tags and proper line breaks for the top 5 articles, using HTML style tags to make an ordered list.";
-"year-in-review-english-top-read-slide-title" = "Top read slide title for English Year in Review.";
+"year-in-review-english-edits" = "Accessibility description for the collective edits slide.";
 "year-in-review-feature-announcement-body" = "Body for year in review feature announcement";
 "year-in-review-feature-announcement-body-personalized" = "Body for year in review feature announcement";
 "year-in-review-feature-announcement-title" = "Title for year in review feature announcement";
