Remove redundant words from an accessilibity message

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1426,7 +1426,7 @@
 "year-in-review-base-viewed-title" = "We have viewed Wikipedia articles $1 Billion times";
 "year-in-review-button-title" = "Year in Review";
 "year-in-review-collective-article-views" = "An animated illustration of a computer screen with a web browser open, actively navigating through a Wikipedia article.";
-"year-in-review-collective-edits" = " A graph An illustration of two Wikipedia puzzle pieces, each carrying a piece of information.";
+"year-in-review-collective-edits" = "An illustration of two Wikipedia puzzle pieces, each carrying a piece of information.";
 "year-in-review-collective-edits-per-minute" = " clock ticking, symbolizing the time spent by people reading Wikipedia.";
 "year-in-review-collective-explore" = "An animated illustration depicting the iconic Wikipedia globe encircled by scaffolding, symbolizing the collaborative effort of people worldwide in building the project. The scene is surrounded by a cityscape, emphasizing its connection to humanity and global culture.";
 "year-in-review-collective-languages" = "An animated illustration of a stone engraved with inscriptions representing various languages, symbolizing how Wikipedia collaboratively builds knowledge from diverse cultures and regions.";
