--- a/Wikipedia/Localizations/de.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/de.lproj/Localizable.strings
@@ -1069,3 +1069,4 @@
 "year-in-review-day-tuesday" = "Dienstags";
 "year-in-review-day-wednesday" = "Mittwochs";
 "year-in-review-personalized-day-title-format" = "Du hast am meisten am $1 gelesen.";
+"year-in-review-feature-announcement-title" = "Erkunde Wikipedia im Rückblick";
