--- a/Wikipedia/Localizations/ja.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/ja.lproj/Localizable.strings
@@ -1213,3 +1213,4 @@
 "wikitext-upload-save-anonymously-warning" = "編集はあなたのデバイスのIPアドレスと関連付けて記録されます。$1すれば、よりプライバシーが高まります。";
 "wikitext-upload-save-sign-in" = "ログイン";
 "wikitext-upload-save-terms-name" = "利用規約";
+"year-in-review-feature-announcement-title" = "ウィキペディアを振り返って見てみましょう";
