--- a/Wikipedia/Localizations/nl.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/nl.lproj/Localizable.strings
@@ -1471,7 +1471,7 @@
 "year-in-review-donate" = "Doneren";
 "year-in-review-donate-now" = "Nu doneren";
 "year-in-review-feature-announcement-body" = "Bekijk welke artikelen we hebben gelezen en bewerkt, en deel hoogtepunten uit ons jaar op Wikipedia.";
-"year-in-review-feature-announcement-title" = "Verken uw Wikipedia-jaaroverzicht";
+"year-in-review-feature-announcement-title" = "Verken Wikipedia in Overzicht";
 "year-in-review-feature-explore-body-personalized" = "Bekijk inzichten over welke artikelen u in de Wikipedia-app leest en welke bewerkingen u hebt gemaakt. Uw leesgeschiedenis blijft beschermd. Leesinzichten worden berekend met behulp van lokaal op uw apparaat opgeslagen gegevens.";
 "year-in-review-finish" = "Voltooien";
 "year-in-review-login-subtitle" = "Meld u aan of maak een account aan om in aanmerking te komen voor meer gepersonaliseerde inzichten";
